ignored large mp4 files to push

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ volleyballVideos/GH010160.MP4
 volleyballVideos/GH010161.MP4
 volleyballVideos/shortertrain.avi
 volleyballVideos/training.avi
+volleyballVideos/oldvids/testingball.mp4
+volleyballVideos/oldvids/GH010160.MP4
+volleyballVideos/oldvids/getball3.mp4
+volleyballVideos/oldvids/getball2.mp4
+volleyballVideos/oldvids/getball1.mp4
+volleyballVideos/oldvids/getball0.mp4
+volleyballVideos/oldvids/1.mp4
+volleyballVideos/getnoball.MP4
+volleyballVideos/oldvids/GH010161.MP4
+volleyballVideos/oldvids/training.mp4
